--- a/sass/modules/_faq-area.scss
+++ b/sass/modules/_faq-area.scss
@@ -206,6 +206,9 @@
         @media only screen and (min-width: 992px) and (max-width: 1399px){
             padding: 0 28px;
         }
+        .section-title{
+            margin-bottom: 32px;
+        }
         .elementor-column{
             &:last-child{
                 @include sm{
